2005-08-16  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicLookAndFeel.java:
	(initComponentDefaults): Fixed typo.
	* javax/swing/plaf/basic/BasicTableUI.java:
	(installKeyboardActions): Replaced calls to registerKeyboardAction with
	additions to an explicit InputMap-ActionMap pair and then set this
	pair as the parent pair to the JTable's.  This matches the JDK where
	the UI Input-Action pairs are the parents of the component's.
	(ActionListenerProxy): New class.

2005-08-16  Mark Wielaard  <mark@klomp.org>

	* examples/gnu/classpath/examples/datatransfer/Demo.java:
	Document and implement ItemListener and FlavorListener.
	(flavors): New field.
	(details): New field.
	(Demo): Add more space, add the flavors panel and flavor listener.
	(createTextPanel): Smaller and wider.
	(createFlavorsPanel): New private method.
	(flavorsChanged): New public method.
	(itemStateChanged): Likewise.
	(ImageComponent.ImageComponent): Smaller default.
	(ObjectComponent.ObjectComponent): Make wider.
	(FlavorsComponent): New static class.
	(FlavorDetailsComponent): Likewise.

2005-08-16  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicLookAndFeel.java:
	Changed font for PasswordField because textbox was 
	being drawn at an awkward height.
	* javax/swing/text/PasswordView.java
	(getPreferredSpan): Implemented
	(modelToView): likewise.
	(viewToModel): partially implemented.

2005-08-16  Jeroen Frijters  <jeroen@frijters.net>

	* java/awt/Component.java
	(dispatchEventImpl): Always call peer.handleEvent().

2005-08-16  Jeroen Frijters  <jeroen@frijters.net>

	* java/awt/Container.java
	(addImpl, remove): Only repaint if the container is showing.

2005-08-16  Mark Wielaard  <mark@klomp.org>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c
	(Java_gnu_java_awt_peer_gtk_GtkToolkit_nativeQueueEmpty): Removed.

2005-08-15  Dalibor Topic  <robilad@kafe.org>

        * native/jni/qt-peer/mainqtthread.cpp,