@@ -46,6 +46,7 @@ import java.awt.Graphics;
 import java.awt.Point;
 import java.awt.Rectangle;
 import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
 import java.awt.event.FocusEvent;
 import java.awt.event.FocusListener;
 import java.awt.event.InputEvent;
@@ -317,10 +318,10 @@ public class BasicTableUI
   private static class ActionListenerProxy
     extends AbstractAction
   {
-    TableAction target;
+    ActionListener target;
     String bindingCommandName;
 
-    public ActionListenerProxy(TableAction li, 
+    public ActionListenerProxy(ActionListener li, 
                                String cmd)
     {
       target = li;
